[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.4.1",
    "gputil>=1.4.0",
    "polars>=1.14.0",
    "pytorch-triton-rocm",
    "spacy>=3.8.2",
    "torch",
    "torchdata>=0.9.0",
    "torchvision",
]


[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[tool.uv.sources]
torch = { path = "torch-2.1.2+rocm6.1.3-cp310-cp310-linux_x86_64.whl" }
torchvision = { path = "torchvision-0.16.1+rocm6.1.3-cp310-cp310-linux_x86_64.whl" }
pytorch-triton-rocm = { path = "pytorch_triton_rocm-2.1.0+rocm6.1.3.4d510c3a44-cp310-cp310-linux_x86_64.whl" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.5.4",
]
